root package.json > fix scripts to run db+express+client concurrently
